# rusic

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  mp3.rs  player.rs  playlist.rs  toolbar.rs
