[package]
name = "rusic"
version = "0.1.0"
authors = ["Abhi <avsv96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.7.0"
gtk = "0.7.0"
gtk-sys = "0.9.0"
glib = "0.8.1"
gdk-pixbuf = "0.7.0"
id3 = "0.3.0"
